# resume_bot

./: .cursorignore  .env.example  .gitignore  README.md  SETUP.md  package-lock.json  package.json  pyproject.toml  resume_bot.code-workspace  run.py  turbo.json
.agents/specs/: .gitignore
.agents/specs/001-user_onboarding/: spec.md  streamlit_detail_pages.md  tasks.md
.agents/specs/004-job_tracking/: spec.md  (+1 more)
.cursor/commands/: complete_tasks.md  create_tasks.md  finalize_spec.md  spec_draft.md
api/: main.py
api/routes/: certificates.py  education.py  messages.py  resumes.py  templates.py  workflows.py
api/schemas/: certificate.py  education.py  experience.py  message.py  response.py  resume.py  template.py  workflow.py
api/services/: certificate_service.py  experience_service.py  job_service.py  pdf_service.py  resume_service.py  template_service.py
api/utils/: __init__.py
app/: __init__.py  constants.py  exceptions.py  main.py
app/api_client/: __init__.py
app/components/: copy_job_context_button.py  status_badge.py
app/dialog/: certificate_dialog.py  education_dialog.py  experience_dialog.py  job_intake_flow.py  job_save_dialog.py  resume_add_certificate_dialog.py  resume_add_education_dialog.py  resume_add_experience_dialog.py  resume_reset_dialog.py
app/pages/: _onboarding.py  home.py  job.py  jobs.py  profile.py  responses.py  templates.py  user.py  users.py
app/services/: certificate_service.py  cover_letter_service.py  education_service.py  experience_service.py  job_service.py  render_pdf.py  resume_service.py  template_service.py  user_service.py
app/shared/: diff_utils.py  filenames.py  formatters.py
apps/agents/: .env.example  langgraph.json  package.json  pyproject.toml
apps/api/: .env.example  cli.py  package.json
apps/web/: README.md  package.json
scripts/: check-api-and-generate-types.sh
src/: cli.py  config.py  constants.py  database.py  exceptions.py  generate_resume.py  logging_config.py
src/core/: __init__.py  callbacks.py  context.py  get_model.py  hitl.py  models.py
tests/: conftest.py  test_achievement_workflow.py  test_database.py  test_experience_service.py  test_gap_analysis.py  test_intake_context.py  test_intake_flow_button.py  test_job_intake_session.py
tests/api/: test_experiences.py  test_health.py  test_jobs.py
(+484 files in other folders)
