[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resume-bot"
version = "0.1.0"
description = "AI-powered resume generation bot"
authors = [{ name = "Lindow", email = "lindow@latentvectors.xyz" }]
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "sqlmodel>=0.0.14",
    "loguru>=0.7.0",
    "streamlit>=1.28.0",
    "streamlit[pdf]>=1.38.0",
    "langgraph>=0.1.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.40.0",
    "google-genai>=0.5.0",
    "jinja2>=3.1.0",
    "PyPDF2>=3.0.0",
    "weasyprint>=60.0",
    "typer>=0.9.0",
    "streamlit-pdf-viewer>=0.0.26",
    "pyperclip>=1.8.2",
    "langsmith>=0.1.0",
    "rich>=13.0.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "langgraph-cli>=0.1.0",
]

[project.scripts]
resume-bot = "app.main:main"

# This is the key part for proper imports!
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["streamlit.*", "langgraph.*", "langchain.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
